# qjs

./: EXPERIENCE_REPORT.md
aether/: .dockerignore  .editorconfig  .gitattributes  .gitignore  .valgrind-suppressions  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLM.md  Makefile  README.md  install.sh
aether/.buildkite/: pipeline.yml
aether/benchmarks/: README.md  baseline.json
aether/benchmarks/cross-language/rust/: Cargo.toml
aether/compiler/: aether_diagnostics.h  aether_error.c  aether_error.h  aether_module.c  aether_module.h  aetherc.c  ast.c  ast.h
aether/docs/: aether-dsl-as-a-rules-engine.md  aether-embedded-in-host-applications.md  aether-ui-testing.md  aether-ui-windows.md  architecture.md  build-system.md  c-embedding.md  c-interop.md  closures-and-builder-dsl.md  closures-and-lifetimes.md  containment-sandbox.md  embedded-namespaces-and-host-bindings.md  emit-lib.md  getting-started.md  hide-and-seal.md  http-server.md  json-parser-design.md  language-reference.md  memory-management.md  module-system-design.md  named-args-and-select.md  next-steps.md  performance-benchmarks.md  profiling-guide.md  runtime-optimizations.md  sequences.md  stdlib-api.md  stdlib-module-pattern.md  stdlib-reference.md  stdlib-vs-contrib.md  structured-concurrency.md  type-annotation-style-guide.md  type-inference-guide.md
aether/examples/: calculator-tui.ae  host-go-demo.ae  host-python-demo.ae  host-tcl-demo.ae  host-tinygo-demo.ae  sandbox-demo.ae  sandbox-spawn.ae
aether/lsp/: README.md  aether_lsp.c  aether_lsp.h  main.c
mquickjs/: cutils.ae  list.ae
(+798 files in other folders)
