[package]
name = "aether_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ping_pong"
path = "src/ping_pong.rs"

[[bin]]
name = "counting"
path = "src/counting.rs"

[[bin]]
name = "thread_ring"
path = "src/thread_ring.rs"

[[bin]]
name = "fork_join"
path = "src/fork_join.rs"

[[bin]]
name = "skynet"
path = "src/skynet.rs"

[dependencies]

# Match the LTO + opt-level Aether and C/C++ benchmarks now use, so the
# cross-language comparison reflects each compiler's release-grade
# codegen. Without these overrides Cargo's default release profile
# leaves `lto = false`, which puts Rust at an unfair disadvantage.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
